fdo#60638: Workaround should be in FillRects rather than FillPolygon.